remove jetty, fix deprecated