@@ -52,7 +52,7 @@ public class MovementReason extends ComboItemLocal {
             return d;
         } else if ((m_iKey.intValue() > 0 && d.doubleValue() < 0.0) ||
             (m_iKey.intValue() < 0 && d.doubleValue() > 0.0)) {
-            return new Double(-d.doubleValue());
+            return Double.valueOf(-d.doubleValue());
         } else {
             return d;
         }            
